@@ -4,7 +4,7 @@
    XML description of printers known to libgutenprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.108 2004/09/17 18:38:27 rleigh Exp $"
+   "$Id: printers.xml,v 1.109 2004/09/30 01:48:48 rlk Exp $"
 -->
 
 <gutenprint xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -579,6 +579,13 @@
       </printer>
       <printer name="EPSON Stylus CX-3200" driver="escp2-cx3200" manufacturer="Epson" model="52">
         <parameter type="float" name="Gamma">0.636</parameter>
+        <parameter type="float" name="Density">1.0</parameter>
+      </printer>
+      <printer name="EPSON Stylus CX-4600" driver="escp2-cx4600" manufacturer="Epson" model="65">
+        <parameter type="float" name="CyanGamma">0.96</parameter>
+        <parameter type="float" name="MagentaGamma">1.02</parameter>
+        <parameter type="float" name="YellowGamma">1.02</parameter>
+        <parameter type="float" name="Gamma">0.688</parameter>
         <parameter type="float" name="Density">1.0</parameter>
       </printer>
       <printer name="EPSON Stylus CX-5100" driver="escp2-cx5100" manufacturer="Epson" model="55">
